flicker onload fixes

--- a/themes/editorial/sass/custom.scss
+++ b/themes/editorial/sass/custom.scss
@@ -243,3 +243,10 @@ tr.program--now {
 }
 
 
+@include breakpoint(large) {
+    #sidebar, #nav-links {
+        opacity: 0;
+    }
+}
+
+
